💄 🐛 Stop category layout shift

--- a/styles/index.css
+++ b/styles/index.css
@@ -65,7 +65,3 @@ body,
 .highlight[aria-expanded="true"] {
   @apply text-black dark:!text-white;
 }
-
-:root {
-  --primary: #90e0ef;
-}
